--- a/research notebooks/Tokenize and Preprocess.ipynb
+++ b/research notebooks/Tokenize and Preprocess.ipynb
@@ -9,7 +9,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -24,7 +24,7 @@
         "import pandas as pd\n",
         "\n",
         "# Load the preprocessed CSV\n",
-        "csv_path = 'processed_2.csv'\n",
+        "csv_path = '../QED_data/processed_2.csv'\n",
         "df = pd.read_csv(csv_path)\n",
         "\n",
         "# Clean the DataFrame\n",
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 4,
       "metadata": {
         "id": "M35cdK1oqK88"
       },
@@ -76,7 +76,7 @@
         "    special_tokens=[\"[CLS]\", \"[SEP]\", \"[PAD]\", \"[MASK]\" , \"[STATE_ID]\"]\n",
         ")\n",
         "\n",
-        "files = [\"preprocessed_2.txt\"]\n",
+        "files = [\"../QED_data/preprocessed_2.txt\"]\n",
         "\n",
         "tokenizer.train(files, trainer)\n",
         "\n",
@@ -85,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -102,7 +102,7 @@
               " 'custom_tokenizer\\\\tokenizer.json')"
             ]
           },
-          "execution_count": 29,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -141,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -183,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -199,7 +199,7 @@
         "tokenizer.pad_token = tokenizer.eos_token if tokenizer.eos_token is not None else \"[PAD]\"\n",
         "\n",
         "# ✅ Load the dataset\n",
-        "csv_path = 'processed_2.csv'\n",
+        "csv_path = '../QED_data/processed_2.csv'\n",
         "df = pd.read_csv(csv_path)\n",
         "\n",
         "# ✅ Clean the DataFrame\n",
@@ -214,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -227,24 +227,24 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'input_ids': tensor([  1,  22,  90,  93, 171,  35, 142,  35, 498, 138,   6,  30,   7,  94,\n",
-            "        171,  35, 123,  35, 221, 440,   6,  30,   7, 157,  94, 171,  35, 142,\n",
-            "         35, 445, 217,   6,  30, 135,  94, 171,  35,  95,  35, 452, 189,   6,\n",
-            "         30, 135, 119,  35,  13,  94, 171,   6,  30,   7,  94, 171,   6,  30,\n",
-            "          7,  77,   6,  30,   7, 119,  35,  12,  94, 171,   6,  30,   7,  94,\n",
-            "        171,   6,  30,   7,  77,   6,  30,   7,  76,  13,  11,  21,   8,  43,\n",
-            "          8,  40,  34,  14,   8, 106, 155, 121,  35, 211, 197,  21,  71,  74,\n",
-            "         35,  17, 233, 186,  35,   4,  35,   4,  71,  74,  35,  17, 233, 200,\n",
-            "         35,   4,  35,   4,  57,   8, 106, 124, 121,  35, 211, 197,  21,  71,\n",
-            "         74,  35,  17, 233, 177,  35,   4,  35,   4,  71, 123,  35, 199, 411,\n",
-            "         35,   4,  35,   4,  57,   8,  37,  72,  43,  35, 164, 146,  13,  71,\n",
-            "         74,  35,  17, 233, 200,  35,   4,  35,   4, 125,  30,  84,  55,   8,\n",
-            "         37,  72,  46,  35, 164,  18, 177,  71,  74,  35,  17, 233, 177,  35,\n",
-            "          4,  35,   4, 125,  30,  84,  55, 139,  37,  72,  44,  35, 164, 146,\n",
-            "         13,  71, 123,  35, 199, 411,  35,   4,  35,   4, 125,  30,  84,  55,\n",
-            "          8,  37,  72,  45,  35, 164,  18, 177,  71,  74,  35,  17, 233, 186,\n",
-            "         35,   4,  35,   4, 125,  30,  84,  55, 224,  30,  78,  52,  35,  87,\n",
-            "         68, 133,  35, 103,  68, 167,  35, 102,   7,   2,   2,   2,   2,   2,\n",
+            "{'input_ids': tensor([  1,  22,  89,  92, 169,  35, 140,  35, 496, 136,   6,  30,   7,  93,\n",
+            "        169,  35, 121,  35, 219, 438,   6,  30,   7, 155,  93, 169,  35, 140,\n",
+            "         35, 443, 215,   6,  30, 133,  93, 169,  35,  94,  35, 450, 187,   6,\n",
+            "         30, 133, 117,  35,  13,  93, 169,   6,  30,   7,  93, 169,   6,  30,\n",
+            "          7,  76,   6,  30,   7, 117,  35,  12,  93, 169,   6,  30,   7,  93,\n",
+            "        169,   6,  30,   7,  76,   6,  30,   7,  75,  13,  11,  21,   8,  43,\n",
+            "          8,  40,  34,  14,   8, 105, 153, 119,  35, 209, 195,  21,  70,  73,\n",
+            "         35,  17, 231, 184,  35,   4,  35,   4,  70,  73,  35,  17, 231, 198,\n",
+            "         35,   4,  35,   4,  57,   8, 105, 122, 119,  35, 209, 195,  21,  70,\n",
+            "         73,  35,  17, 231, 175,  35,   4,  35,   4,  70, 121,  35, 197, 409,\n",
+            "         35,   4,  35,   4,  57,   8,  37,  71,  43,  35, 162, 144,  13,  70,\n",
+            "         73,  35,  17, 231, 198,  35,   4,  35,   4, 123,  30,  83,  55,   8,\n",
+            "         37,  71,  46,  35, 162,  18, 175,  70,  73,  35,  17, 231, 175,  35,\n",
+            "          4,  35,   4, 123,  30,  83,  55, 137,  37,  71,  44,  35, 162, 144,\n",
+            "         13,  70, 121,  35, 197, 409,  35,   4,  35,   4, 123,  30,  83,  55,\n",
+            "          8,  37,  71,  45,  35, 162,  18, 175,  70,  73,  35,  17, 231, 184,\n",
+            "         35,   4,  35,   4, 123,  30,  83,  55, 222,  30,  77,  52,  35,  86,\n",
+            "         67, 131,  35, 102,  67, 165,  35, 101,   7,   2,   2,   2,   2,   2,\n",
             "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
             "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
             "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
@@ -284,13 +284,13 @@
             "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
             "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
             "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-            "        0, 0, 0, 0, 0]), 'labels': tensor([  1,  20,  11, 143,   8,  40,  34,  16,  96,  47,  35,  37,  34,  16,\n",
-            "         68,  76,  13,  11,  14,   8,  47,  35,  37,  34,  14,   8,  52,  35,\n",
-            "         87,  68, 140,  11,  14,   8,  52,  35, 114,   8,  52,  35,  86,  68,\n",
-            "         76,  13,  11,  14,   8,  47,  35,  37,  34,  14,   8,  52,  35, 117,\n",
-            "         68, 140,  11,  14,   8,  52,  35,  97,   8,  52,  35, 116, 163,  52,\n",
-            "         35, 111,  68, 132,  14,  78,  52,  35,  87,  68, 133,  35, 103,  68,\n",
-            "        167,  35, 102, 151,  14,   7,   2,   2,   2,   2,   2,   2,   2,   2,\n",
+            "        0, 0, 0, 0, 0]), 'labels': tensor([  1,  20,  11, 141,   8,  40,  34,  16,  95,  47,  35,  37,  34,  16,\n",
+            "         67,  75,  13,  11,  14,   8,  47,  35,  37,  34,  14,   8,  52,  35,\n",
+            "         86,  67, 138,  11,  14,   8,  52,  35, 113,   8,  52,  35,  85,  67,\n",
+            "         75,  13,  11,  14,   8,  47,  35,  37,  34,  14,   8,  52,  35, 116,\n",
+            "         67, 138,  11,  14,   8,  52,  35,  96,   8,  52,  35, 115, 161,  52,\n",
+            "         35, 110,  67, 130,  14,  77,  52,  35,  86,  67, 131,  35, 102,  67,\n",
+            "        165,  35, 101, 149,  14,   7,   2,   2,   2,   2,   2,   2,   2,   2,\n",
             "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
             "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
             "          2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,\n",
@@ -428,7 +428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 13,
       "metadata": {
         "id": "PAyufV7O94fH"
       },
@@ -445,7 +445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -461,7 +461,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
