--- a/research notebooks/extract_and_tokenize_dataset.ipynb
+++ b/research notebooks/extract_and_tokenize_dataset.ipynb
@@ -50,7 +50,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preprocessed data saved to processed_2.csv\n",
+      "Preprocessed data saved to some_random_run.csv\n",
       "First 5 data entries:\n",
       "{'text': 'e_gam_[STATE_ID](X)^(*) e_del_[STATE_ID](X)^(*) to e_eps_[STATE_ID](X) e_eta_[STATE_ID](X) V_1 e(X) e(X) A(X) V_0 e(X) e(X) A(X) -1/2*i*e^2*gamma_{+%\\\\sigma_165 %%%gam_145_[STATE_ID]_[STATE_ID] %%%gam_146_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\sigma_165 %%%gam_147_[STATE_ID]_[STATE_ID] %%%del_137_[STATE_ID]_[STATE_ID]}*e_{i_3 %%%gam_146_[STATE_ID]_[STATE_ID]}(X)_u*e_{k_3 %%%del_137_[STATE_ID]_[STATE_ID]}(X)_u*e_{l_3 %%%gam_145_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{i_5 %%%gam_147_[STATE_ID]_[STATE_ID]}(X)_u^(*)/(X)', 'label': '2*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23 + -1/2*m_e^2*s_24 + 1/2*s_12*s_34)*(m_e^2 + -s_13 + 1/2*reg_prop)^(-2)'}\n",
       "{'text': 'e_gam_[STATE_ID](X)^(*) e_del_[STATE_ID](X)^(*) to e_eps_[STATE_ID](X) e_eta_[STATE_ID](X) V_0 e(X) e(X) A(X) V_1 e(X) e(X) A(X) 1/2*i*e^2*gamma_{+%\\\\sigma_172 %%%gam_162_[STATE_ID]_[STATE_ID] %%%del_144_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\sigma_172 %%%gam_163_[STATE_ID]_[STATE_ID] %%%gam_164_[STATE_ID]_[STATE_ID]}*e_{i_3 %%%gam_164_[STATE_ID]_[STATE_ID]}(X)_u*e_{k_3 %%%del_144_[STATE_ID]_[STATE_ID]}(X)_u*e_{l_3 %%%gam_162_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{i_5 %%%gam_163_[STATE_ID]_[STATE_ID]}(X)_u^(*)/(X)', 'label': '2*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_23 + 1/2*s_13*s_24 + 1/2*s_12*s_34)*(m_e^2 + -s_23 + 1/2*reg_prop)^(-2)'}\n",
@@ -59,7 +59,7 @@
       "{'text': 'e_gam_[STATE_ID](X)^(*) e_del_[STATE_ID](X)^(*) to e_eps_[STATE_ID](X) e_eta_[STATE_ID](X) V_1 e(X) e(X) A(X) V_0 e(X) e(X) A(X) -i*e^2*gamma_{+%\\\\sigma_435 %%%gam_574_[STATE_ID]_[STATE_ID] %%%gam_575_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\sigma_435 %%%gam_576_[STATE_ID]_[STATE_ID] %%%del_406_[STATE_ID]_[STATE_ID]}*e_{i_43 %%%gam_576_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{l_31 %%%gam_574_[STATE_ID]_[STATE_ID]}(X)_u^(*)*e_{k_31 %%%del_406_[STATE_ID]_[STATE_ID]}(X)_u*e_{j_21 %%%gam_575_[STATE_ID]_[STATE_ID]}(X)_u/(X)*s_13 + s_33 + reg_prop)', 'label': '8*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23 + -1/2*m_e^2*s_24 + 1/2*s_12*s_34)*(m_e^2 + (-2)*s_13 + s_33 + reg_prop)^(-2)'}\n",
       "\n",
       "Number of unique tokens in the dataset: 199725\n",
-      "Sample tokens: ['%%%gam_26368_[STATE_ID]_[STATE_ID]', '-1/3*i*e^2*gamma_{+%\\\\tau_566718', '%%%eta_52980_[STATE_ID]_[STATE_ID]}(X)_v^(*)*mu_{k_31329', '%%%eps_79217_[STATE_ID]_[STATE_ID]}(X)_u)/(X)', '%%%del_19086_[STATE_ID]_[STATE_ID]}*d_{i_18737', '%%%eps_16956_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\nu_53960', '%%%del_255654_[STATE_ID]_[STATE_ID]}(X)_v)/(X)*s_12', '%%%gam_108193_[STATE_ID]_[STATE_ID]}(X)_v^(*)*d_{j_99632', '%%%gam_343050_[STATE_ID]_[STATE_ID]', '%%%gam_288652_[STATE_ID]_[STATE_ID]', '%%%eta_152336_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\tau_105572', '%%%gam_25647_[STATE_ID]_[STATE_ID]}(X)_u^(*)*d_{i_19149', '%%%del_143452_[STATE_ID]_[STATE_ID]}(X)_v*b_{l_166311', '%%%gam_321249_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\tau_654745', '%%%beta_82922_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\nu_333741', '%%%del_145322_[STATE_ID]_[STATE_ID]}(X)_u*tt_{i_116865', 'p_1_%\\\\sigma_648133*gamma_{%\\\\sigma_648132', '%%%eta_164889_[STATE_ID]_[STATE_ID]', 's_alpha_18803(X)^(*)', '%%%gam_139397_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\tau_145626']\n"
+      "Sample tokens: ['%%%eta_103110_[STATE_ID]_[STATE_ID]}(X)_v^(*)', '%%%gam_457939_[STATE_ID]_[STATE_ID]', '+%\\\\tau_265323}(X)*b_{i_55265', '%%%gam_249223_[STATE_ID]_[STATE_ID]', '%%%eta_258534_[STATE_ID]_[STATE_ID]', '%%%gam_136986_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\sigma_140654', 's_del_33850(X)', '%%%eps_104825_[STATE_ID]_[STATE_ID]}*A_{k_28075', '%%%gam_359595_[STATE_ID]_[STATE_ID]}*A_{j_172521', '+%\\\\tau_715216}(X)^(*)*A_{l_270259', '%%%eta_222592_[STATE_ID]_[STATE_ID]}*A_{j_91497', '-p_3_%\\\\lambda_316727*gamma_{+%\\\\lambda_316727', '%%%eta_6706_[STATE_ID]_[STATE_ID]}(X)_v^(*)*mu_{j_5625', '%%%eps_133124_[STATE_ID]_[STATE_ID]}(X)_u*s_{i_145065', '%%%gam_413829_[STATE_ID]_[STATE_ID]}(X)_u^(*))/(X)', '%%%gam_167522_[STATE_ID]_[STATE_ID]}*gamma_{%\\\\tau_395685', '4/9*i*e^2*(X)*A_{k_52541', '%%%gam_49533_[STATE_ID]_[STATE_ID]}(X)_u^(*)/(X)', '%%%eta_55314_[STATE_ID]_[STATE_ID]', '%%%eta_51085_[STATE_ID]_[STATE_ID]}(X)_v^(*)*s_{l_30491']\n"
      ]
     }
    ],
@@ -138,7 +138,7 @@
     "\n",
     "# Convert to DataFrame and save as CSV\n",
     "df = pd.DataFrame(data)\n",
-    "output_csv_path = \"processed_2.csv\"  # Replace with desired path\n",
+    "output_csv_path = \"some_random_run.csv\"  # Replace with desired path\n",
     "df.to_csv(output_csv_path, index=False)\n",
     "print(f\"Preprocessed data saved to {output_csv_path}\")\n",
     "\n",
