--- a/research notebooks/test01.ipynb
+++ b/research notebooks/test01.ipynb
@@ -12488,7 +12488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -12513,7 +12513,7 @@
       "Number of rows after filtering NaN: 15552\n",
       "Preprocessed CSV saved to path_to_your_preprocessed_csv.csv\n",
       "Number of unique tokens in the preprocessed dataset: 173\n",
-      "Sample tokens: ['t_gam', 'b', 'p', '_v', '36', 'k', 'c_eta_', '^', 'e_del_', ')^(-', 'u_beta_', 'eps', 'm_c', '(', 'e_alpha_', 'tt', 'e_eps_', 'tt_gam', '(-', 't']\n",
+      "Sample tokens: ['256', '%%%', '](', 'eta', 'X', 'sigma', 'e_del_', 'm_t', ')*', 'mu_', 'tt', 's', 's_eta', 's_44', 'c', ']}(', 's_del', 'eps', 'del', 's_22']\n",
       "\n",
       "Preprocessed first non-empty row:\n",
       "Input: e_gam_[STATE_ID](X)^(*) e_del_[STATE_ID](X)^(*) to e_eps_[STATE_ID](X) e_eta_[STATE_ID](X) V_1 e(X) e(X) A(X) V_0 e(X) e(X) A(X) -1/2*i*e^2*gamma_{+%\\sigma [STATE_ID] %%%gam [STATE_ID][STATE_ID] %%%gam [STATE_ID][STATE_ID]}*gamma_{%\\sigma [STATE_ID] %%%gam [STATE_ID][STATE_ID] %%%del [STATE_ID][STATE_ID]}*e_{i [STATE_ID] %%%gam [STATE_ID][STATE_ID]}(X)_u*e_{k [STATE_ID] %%%del [STATE_ID][STATE_ID]}(X)_u*e_{l [STATE_ID] %%%gam [STATE_ID][STATE_ID]}(X)_u^(*)*e_{i [STATE_ID] %%%gam [STATE_ID][STATE_ID]}(X)_u^(*)/(X)\n",
@@ -12526,7 +12526,7 @@
     "import re\n",
     "\n",
     "# Load the CSV data\n",
-    "csv_path = \"processed_2.csv\"  # Replace with your CSV path\n",
+    "csv_path = \"some_random_run.csv\"  # Replace with your CSV path\n",
     "df = pd.read_csv(csv_path)\n",
     "\n",
     "# Assuming the CSV has columns 'text' and 'target'\n",
