Add: SineKAN MoE

--- a/notebooks/preprocess.ipynb
+++ b/notebooks/preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,26 +37,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracted 15552 records. Saved to QED_data/preprocessed_data.csv\n"
+      "Extracted 647 records. Saved to D:\\DecoderKAN\\QED_data\\preprocessed_EW-2-2-0-data.csv\n"
      ]
     }
    ],
    "source": [
-    "input_file = \"QED_data/raw_data.txt\" \n",
-    "output_file = \"QED_data/preprocessed_data.csv\"\n",
+    "input_file = r\"D:\\DecoderKAN\\QED_data\\EW-2-to-2-diag-TreeLevel-0.txt\" \n",
+    "output_file = r\"D:\\DecoderKAN\\QED_data\\preprocessed_EW-2-2-0-data.csv\"\n",
     "extract_amp_sqamp(input_file, output_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -87,103 +87,103 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-1/2*i*e^2*gamma_{+%\\sigma_165,%gam_145,%gam_1...</td>\n",
-       "      <td>2*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23...</td>\n",
+       "      <td>-2/9*i*e^2*P_R_{%beta_149,%eta_248}*P_R_{%gam_...</td>\n",
+       "      <td>8/81*e^4*s_12*s_34*(m_u^2 + -s_13 + 1/2*reg_pr...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1/2*i*e^2*gamma_{+%\\sigma_172,%gam_162,%del_14...</td>\n",
-       "      <td>2*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_...</td>\n",
+       "      <td>2/9*i*e^2*P_R_{%beta_164,%alpha_460}*P_R_{%gam...</td>\n",
+       "      <td>8/81*e^4*s_12*s_34*(m_u^2 + -s_23 + 1/2*reg_pr...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-1/2*i*e^2*gamma_{+%\\sigma_293,%gam_358,%gam_3...</td>\n",
-       "      <td>2*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23...</td>\n",
+       "      <td>-2/9*i*e^2*cos(theta_W)^(-2)*sin(theta_W)^2*P_...</td>\n",
+       "      <td>8/81*e^4*s_12*s_34*(m_u^2 + -1/2*m_W3^2 + -s_1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1/2*i*e^2*gamma_{+%\\sigma_301,%gam_377,%del_27...</td>\n",
-       "      <td>2*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_...</td>\n",
+       "      <td>2/9*i*e^2*cos(theta_W)^(-2)*sin(theta_W)^2*P_R...</td>\n",
+       "      <td>8/81*e^4*s_12*s_34*(m_u^2 + -1/2*m_W3^2 + -s_2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-i*e^2*gamma_{+%\\sigma_435,%gam_574,%gam_575}*...</td>\n",
-       "      <td>8*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23...</td>\n",
+       "      <td>-2/9*i*e^2*P_R_{%del_910,%eta_689}*P_R_{%eps_5...</td>\n",
+       "      <td>16/81*e^4*s_14*s_23*(m_u^2 + s_12 + 1/2*reg_pr...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>i*e^2*gamma_{+%\\sigma_440,%gam_593,%del_415}*g...</td>\n",
-       "      <td>8*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_...</td>\n",
+       "      <td>2/9*i*e^2*P_R_{%del_925,%eta_713}*P_R_{%eps_60...</td>\n",
+       "      <td>16/81*e^4*s_14*s_23*(m_u^2 + -s_13 + 1/2*reg_p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>-i*e^2*gamma_{+%\\sigma_555,%gam_789,%gam_790}*...</td>\n",
-       "      <td>8*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23...</td>\n",
+       "      <td>-2/9*i*e^2*cos(theta_W)^(-2)*sin(theta_W)^2*P_...</td>\n",
+       "      <td>16/81*e^4*s_14*s_23*(m_u^2 + -1/2*m_W3^2 + s_1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>i*e^2*gamma_{+%\\sigma_570,%gam_806,%del_552}*g...</td>\n",
-       "      <td>8*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_...</td>\n",
+       "      <td>2/9*i*e^2*cos(theta_W)^(-2)*sin(theta_W)^2*P_R...</td>\n",
+       "      <td>16/81*e^4*s_14*s_23*(m_u^2 + -1/2*m_W3^2 + -s_...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>-1/2*i*e^2*gamma_{+%\\sigma_744,%gam_1008,%gam_...</td>\n",
-       "      <td>2*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23...</td>\n",
+       "      <td>-2/9*i*e^2*P_R_{%alpha_1137,%eta_1208}*P_R_{%a...</td>\n",
+       "      <td>16/81*e^4*s_13*s_24*(m_u^2 + s_12 + 1/2*reg_pr...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>i*e^2*gamma_{+%\\sigma_749,%gam_1032,%gam_1033}...</td>\n",
-       "      <td>8*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_...</td>\n",
+       "      <td>2/9*i*e^2*P_R_{%alpha_1163,%eta_1232}*P_R_{%al...</td>\n",
+       "      <td>16/81*e^4*s_13*s_24*(m_u^2 + -s_23 + 1/2*reg_p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>-1/2*i*e^2*gamma_{+%\\sigma_864,%gam_1260,%gam_...</td>\n",
-       "      <td>2*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23...</td>\n",
+       "      <td>-2/9*i*e^2*cos(theta_W)^(-2)*sin(theta_W)^2*P_...</td>\n",
+       "      <td>16/81*e^4*s_13*s_24*(m_u^2 + -1/2*m_W3^2 + s_1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>i*e^2*gamma_{+%\\sigma_879,%gam_1279,%eta_263}*...</td>\n",
-       "      <td>8*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_...</td>\n",
+       "      <td>2/9*i*e^2*cos(theta_W)^(-2)*sin(theta_W)^2*P_R...</td>\n",
+       "      <td>16/81*e^4*s_13*s_24*(m_u^2 + -1/2*m_W3^2 + -s_...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>-i*e^2*gamma_{+%\\sigma_1013,%gam_1476,%gam_147...</td>\n",
-       "      <td>8*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23...</td>\n",
+       "      <td>-2/9*i*e^2*P_R_{%alpha_1877,%beta_1052}*P_R_{%...</td>\n",
+       "      <td>16/81*e^4*s_13*s_24*(m_u^2 + s_12 + 1/2*reg_pr...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>i*e^2*gamma_{+%\\sigma_1018,%gam_1495,%eta_335}...</td>\n",
-       "      <td>8*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_...</td>\n",
+       "      <td>2/9*i*e^2*P_R_{%alpha_1892,%del_1770}*P_R_{%ga...</td>\n",
+       "      <td>16/81*e^4*s_13*s_24*(m_u^2 + -s_23 + 1/2*reg_p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>-i*e^2*gamma_{+%\\sigma_1139,%gam_1691,%gam_169...</td>\n",
-       "      <td>8*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23...</td>\n",
+       "      <td>-2/9*i*e^2*cos(theta_W)^(-2)*sin(theta_W)^2*P_...</td>\n",
+       "      <td>16/81*e^4*s_13*s_24*(m_u^2 + -1/2*m_W3^2 + s_1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>i*e^2*gamma_{+%\\sigma_1147,%gam_1708,%eta_407}...</td>\n",
-       "      <td>8*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_...</td>\n",
+       "      <td>2/9*i*e^2*cos(theta_W)^(-2)*sin(theta_W)^2*P_R...</td>\n",
+       "      <td>16/81*e^4*s_13*s_24*(m_u^2 + -1/2*m_W3^2 + -s_...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>-1/2*i*e^2*gamma_{+%\\sigma_1331,%gam_1908,%gam...</td>\n",
-       "      <td>1/4*e^4*(16*m_e^4 + 8*m_e^2*s_12 + 8*s_14*s_23...</td>\n",
+       "      <td>-2/9*i*e^2*P_R_{%eps_1796,%eta_2074}*P_R_{%eta...</td>\n",
+       "      <td>16/81*e^4*s_14*s_23*(m_u^2 + s_12 + 1/2*reg_pr...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>1/2*i*e^2*gamma_{+%\\sigma_1336,%gam_1927,%eps_...</td>\n",
-       "      <td>1/4*e^4*(16*m_e^4 + (-8)*m_e^2*s_13 + 8*s_14*s...</td>\n",
+       "      <td>2/9*i*e^2*P_R_{%eps_1824,%eps_1820}*P_R_{%eta_...</td>\n",
+       "      <td>16/81*e^4*s_14*s_23*(m_u^2 + -s_13 + 1/2*reg_p...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>-1/2*i*e^2*gamma_{+%\\sigma_1459,%gam_2130,%gam...</td>\n",
-       "      <td>1/4*e^4*(16*m_e^4 + 8*m_e^2*s_12 + 8*s_14*s_23...</td>\n",
+       "      <td>-2/9*i*e^2*cos(theta_W)^(-2)*sin(theta_W)^2*P_...</td>\n",
+       "      <td>16/81*e^4*s_14*s_23*(m_u^2 + -1/2*m_W3^2 + s_1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>1/2*i*e^2*gamma_{+%\\sigma_1474,%gam_2154,%gam_...</td>\n",
-       "      <td>1/4*e^4*(16*m_e^4 + (-8)*m_e^2*s_13 + 8*s_14*s...</td>\n",
+       "      <td>2/9*i*e^2*cos(theta_W)^(-2)*sin(theta_W)^2*P_R...</td>\n",
+       "      <td>16/81*e^4*s_14*s_23*(m_u^2 + -1/2*m_W3^2 + -s_...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -191,51 +191,51 @@
       ],
       "text/plain": [
        "                                            amplitude  \\\n",
-       "0   -1/2*i*e^2*gamma_{+%\\sigma_165,%gam_145,%gam_1...   \n",
-       "1   1/2*i*e^2*gamma_{+%\\sigma_172,%gam_162,%del_14...   \n",
-       "2   -1/2*i*e^2*gamma_{+%\\sigma_293,%gam_358,%gam_3...   \n",
-       "3   1/2*i*e^2*gamma_{+%\\sigma_301,%gam_377,%del_27...   \n",
-       "4   -i*e^2*gamma_{+%\\sigma_435,%gam_574,%gam_575}*...   \n",
-       "5   i*e^2*gamma_{+%\\sigma_440,%gam_593,%del_415}*g...   \n",
-       "6   -i*e^2*gamma_{+%\\sigma_555,%gam_789,%gam_790}*...   \n",
-       "7   i*e^2*gamma_{+%\\sigma_570,%gam_806,%del_552}*g...   \n",
-       "8   -1/2*i*e^2*gamma_{+%\\sigma_744,%gam_1008,%gam_...   \n",
-       "9   i*e^2*gamma_{+%\\sigma_749,%gam_1032,%gam_1033}...   \n",
-       "10  -1/2*i*e^2*gamma_{+%\\sigma_864,%gam_1260,%gam_...   \n",
-       "11  i*e^2*gamma_{+%\\sigma_879,%gam_1279,%eta_263}*...   \n",
-       "12  -i*e^2*gamma_{+%\\sigma_1013,%gam_1476,%gam_147...   \n",
-       "13  i*e^2*gamma_{+%\\sigma_1018,%gam_1495,%eta_335}...   \n",
-       "14  -i*e^2*gamma_{+%\\sigma_1139,%gam_1691,%gam_169...   \n",
-       "15  i*e^2*gamma_{+%\\sigma_1147,%gam_1708,%eta_407}...   \n",
-       "16  -1/2*i*e^2*gamma_{+%\\sigma_1331,%gam_1908,%gam...   \n",
-       "17  1/2*i*e^2*gamma_{+%\\sigma_1336,%gam_1927,%eps_...   \n",
-       "18  -1/2*i*e^2*gamma_{+%\\sigma_1459,%gam_2130,%gam...   \n",
-       "19  1/2*i*e^2*gamma_{+%\\sigma_1474,%gam_2154,%gam_...   \n",
+       "0   -2/9*i*e^2*P_R_{%beta_149,%eta_248}*P_R_{%gam_...   \n",
+       "1   2/9*i*e^2*P_R_{%beta_164,%alpha_460}*P_R_{%gam...   \n",
+       "2   -2/9*i*e^2*cos(theta_W)^(-2)*sin(theta_W)^2*P_...   \n",
+       "3   2/9*i*e^2*cos(theta_W)^(-2)*sin(theta_W)^2*P_R...   \n",
+       "4   -2/9*i*e^2*P_R_{%del_910,%eta_689}*P_R_{%eps_5...   \n",
+       "5   2/9*i*e^2*P_R_{%del_925,%eta_713}*P_R_{%eps_60...   \n",
+       "6   -2/9*i*e^2*cos(theta_W)^(-2)*sin(theta_W)^2*P_...   \n",
+       "7   2/9*i*e^2*cos(theta_W)^(-2)*sin(theta_W)^2*P_R...   \n",
+       "8   -2/9*i*e^2*P_R_{%alpha_1137,%eta_1208}*P_R_{%a...   \n",
+       "9   2/9*i*e^2*P_R_{%alpha_1163,%eta_1232}*P_R_{%al...   \n",
+       "10  -2/9*i*e^2*cos(theta_W)^(-2)*sin(theta_W)^2*P_...   \n",
+       "11  2/9*i*e^2*cos(theta_W)^(-2)*sin(theta_W)^2*P_R...   \n",
+       "12  -2/9*i*e^2*P_R_{%alpha_1877,%beta_1052}*P_R_{%...   \n",
+       "13  2/9*i*e^2*P_R_{%alpha_1892,%del_1770}*P_R_{%ga...   \n",
+       "14  -2/9*i*e^2*cos(theta_W)^(-2)*sin(theta_W)^2*P_...   \n",
+       "15  2/9*i*e^2*cos(theta_W)^(-2)*sin(theta_W)^2*P_R...   \n",
+       "16  -2/9*i*e^2*P_R_{%eps_1796,%eta_2074}*P_R_{%eta...   \n",
+       "17  2/9*i*e^2*P_R_{%eps_1824,%eps_1820}*P_R_{%eta_...   \n",
+       "18  -2/9*i*e^2*cos(theta_W)^(-2)*sin(theta_W)^2*P_...   \n",
+       "19  2/9*i*e^2*cos(theta_W)^(-2)*sin(theta_W)^2*P_R...   \n",
        "\n",
        "                                    squared_amplitude  \n",
-       "0   2*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23...  \n",
-       "1   2*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_...  \n",
-       "2   2*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23...  \n",
-       "3   2*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_...  \n",
-       "4   8*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23...  \n",
-       "5   8*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_...  \n",
-       "6   8*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23...  \n",
-       "7   8*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_...  \n",
-       "8   2*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23...  \n",
-       "9   8*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_...  \n",
-       "10  2*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23...  \n",
-       "11  8*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_...  \n",
-       "12  8*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23...  \n",
-       "13  8*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_...  \n",
-       "14  8*e^4*(m_e^4 + -1/2*m_e^2*s_13 + 1/2*s_14*s_23...  \n",
-       "15  8*e^4*(m_e^4 + -1/2*m_e^2*s_14 + -1/2*m_e^2*s_...  \n",
-       "16  1/4*e^4*(16*m_e^4 + 8*m_e^2*s_12 + 8*s_14*s_23...  \n",
-       "17  1/4*e^4*(16*m_e^4 + (-8)*m_e^2*s_13 + 8*s_14*s...  \n",
-       "18  1/4*e^4*(16*m_e^4 + 8*m_e^2*s_12 + 8*s_14*s_23...  \n",
-       "19  1/4*e^4*(16*m_e^4 + (-8)*m_e^2*s_13 + 8*s_14*s...  "
+       "0   8/81*e^4*s_12*s_34*(m_u^2 + -s_13 + 1/2*reg_pr...  \n",
+       "1   8/81*e^4*s_12*s_34*(m_u^2 + -s_23 + 1/2*reg_pr...  \n",
+       "2   8/81*e^4*s_12*s_34*(m_u^2 + -1/2*m_W3^2 + -s_1...  \n",
+       "3   8/81*e^4*s_12*s_34*(m_u^2 + -1/2*m_W3^2 + -s_2...  \n",
+       "4   16/81*e^4*s_14*s_23*(m_u^2 + s_12 + 1/2*reg_pr...  \n",
+       "5   16/81*e^4*s_14*s_23*(m_u^2 + -s_13 + 1/2*reg_p...  \n",
+       "6   16/81*e^4*s_14*s_23*(m_u^2 + -1/2*m_W3^2 + s_1...  \n",
+       "7   16/81*e^4*s_14*s_23*(m_u^2 + -1/2*m_W3^2 + -s_...  \n",
+       "8   16/81*e^4*s_13*s_24*(m_u^2 + s_12 + 1/2*reg_pr...  \n",
+       "9   16/81*e^4*s_13*s_24*(m_u^2 + -s_23 + 1/2*reg_p...  \n",
+       "10  16/81*e^4*s_13*s_24*(m_u^2 + -1/2*m_W3^2 + s_1...  \n",
+       "11  16/81*e^4*s_13*s_24*(m_u^2 + -1/2*m_W3^2 + -s_...  \n",
+       "12  16/81*e^4*s_13*s_24*(m_u^2 + s_12 + 1/2*reg_pr...  \n",
+       "13  16/81*e^4*s_13*s_24*(m_u^2 + -s_23 + 1/2*reg_p...  \n",
+       "14  16/81*e^4*s_13*s_24*(m_u^2 + -1/2*m_W3^2 + s_1...  \n",
+       "15  16/81*e^4*s_13*s_24*(m_u^2 + -1/2*m_W3^2 + -s_...  \n",
+       "16  16/81*e^4*s_14*s_23*(m_u^2 + s_12 + 1/2*reg_pr...  \n",
+       "17  16/81*e^4*s_14*s_23*(m_u^2 + -s_13 + 1/2*reg_p...  \n",
+       "18  16/81*e^4*s_14*s_23*(m_u^2 + -1/2*m_W3^2 + s_1...  \n",
+       "19  16/81*e^4*s_14*s_23*(m_u^2 + -1/2*m_W3^2 + -s_...  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,6 +243,13 @@
    "source": [
     "pd.read_csv(output_file , nrows=20)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
