--- a/notebooks/tokenizer.ipynb
+++ b/notebooks/tokenizer.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ab54940e",
    "metadata": {},
    "outputs": [],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "509c54d3",
    "metadata": {},
    "outputs": [],
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d753640e",
    "metadata": {},
    "outputs": [
@@ -326,14 +326,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded dataset with 9952 records.\n"
+      "Loaded dataset with 27560 records.\n"
      ]
     }
    ],
    "source": [
     "special_symbols = [\"<PAD>\", \"<UNK>\", \"<BOS>\", \"<EOS>\", \"<SEP>\"]\n",
     "\n",
-    "csv_file = r\"D:\\DecoderKAN\\QED_data\\train_data.csv\"\n",
+    "csv_file = r\"D:\\DecoderKAN\\QED_data\\preprocessed_EW-2-3-data.csv\"\n",
     "try:\n",
     "    df = pd.read_csv(csv_file)\n",
     "    print(f\"Loaded dataset with {len(df)} records.\")\n",
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "37ff8c84",
    "metadata": {},
    "outputs": [
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "2057582b",
    "metadata": {},
    "outputs": [
@@ -588,35 +588,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "=== Example Encoding/Decoding ===\n",
-      "Sample Target Expression: 1/81*e^4*(16*m_b^2*m_c^2 + 8*m_b^2*s_12 + 8*s_14*s_23 + 8*s_13*s_24 + 8*m_c^2*s_34)*(m_c^2 + s_12 + 1/2*reg_prop)^(-2)\n",
-      "Tokens: ['1', '/', '81', '*', 'E_CHARGE', '^', '4', '*', '(', '16', '*', 'm_b', '^', '2', '*', 'm_c', '^', '2', '+', '8', '*', 'm_b', '^', '2', '*', 'MANDELSTAM_12', '+', '8', '*', 'MANDELSTAM_14', '*', 'MANDELSTAM_23', '+', '8', '*', 'MANDELSTAM_13', '*', 'MANDELSTAM_24', '+', '8', '*', 'm_c', '^', '2', '*', 'MANDELSTAM_34', ')', '*', '(', 'm_c', '^', '2', '+', 'MANDELSTAM_12', '+', '1', '/', '2', '*', 'reg_prop', ')', '^', '(', '-', '2', ')']\n",
-      "Encoded: [11, 10, 23, 7, 25, 37, 19, 7, 5, 13, 7, 40, 37, 14, 7, 41, 37, 14, 8, 22, 7, 40, 37, 14, 7, 28, 8, 22, 7, 30, 7, 32, 8, 22, 7, 29, 7, 33, 8, 22, 7, 41, 37, 14, 7, 35, 6, 7, 5, 41, 37, 14, 8, 28, 8, 11, 10, 14, 7, 48, 6, 37, 5, 9, 14, 6]\n",
-      "Decoded: ['1', '/', '81', '*', 'E_CHARGE', '^', '4', '*', '(', '16', '*', 'm_b', '^', '2', '*', 'm_c', '^', '2', '+', '8', '*', 'm_b', '^', '2', '*', 'MANDELSTAM_12', '+', '8', '*', 'MANDELSTAM_14', '*', 'MANDELSTAM_23', '+', '8', '*', 'MANDELSTAM_13', '*', 'MANDELSTAM_24', '+', '8', '*', 'm_c', '^', '2', '*', 'MANDELSTAM_34', ')', '*', '(', 'm_c', '^', '2', '+', 'MANDELSTAM_12', '+', '1', '/', '2', '*', 'reg_prop', ')', '^', '(', '-', '2', ')']\n",
-      "\n",
-      "=== Validating Full Dataset ===\n"
+      "=== Example Encoding/Decoding ===\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Validating dataset: 100%|██████████| 9952/9952 [00:56<00:00, 175.69it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Symbolic Equivalence True for 9952/9952 target expressions.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'tgt_vocab' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m sample_tgt_expr = df[\u001b[33m'\u001b[39m\u001b[33msqamp\u001b[39m\u001b[33m'\u001b[39m].iloc[\u001b[32m0\u001b[39m]\n\u001b[32m      3\u001b[39m sample_tgt_tokens = tokenizer.tgt_tokenize(sample_tgt_expr)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m encoded = \u001b[43mtgt_vocab\u001b[49m.encode(sample_tgt_tokens)\n\u001b[32m      5\u001b[39m decoded = tgt_vocab.decode(encoded)\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mSample Target Expression: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msample_tgt_expr\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'tgt_vocab' is not defined"
      ]
     }
    ],
